--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -57,6 +57,7 @@ body {
   --nude-color: #E1D6C8;
   --taupe-color: #A68F6D;
   --dark-color: #3B3B3C;
+  --sand-color: #E3E1D9;
 
   --main-font: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
   --serif-one-font: 'Artaza-regular', serif;
