--- a/mi-aplicacion/src/pages/Contact/Contact2.css
+++ b/mi-aplicacion/src/pages/Contact/Contact2.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     padding-top: 6rem;
     padding-bottom: 10rem;
-    background-color: #E4DFD4;
+    background-color: var(--sand-color);
 }
 
 .header.contact-page-header {
