--- a/mi-aplicacion/src/pages/IndividualHome/Components/PropertyHeader.css
+++ b/mi-aplicacion/src/pages/IndividualHome/Components/PropertyHeader.css
@@ -6,6 +6,8 @@
     margin-left: 8.5rem;
     margin-right: 8.5rem;
     border-bottom: 1px solid var(--dark-color);
+    /* background-color: #A59E8C; */
+
   }
   
   .individual-home-maininfo h1 {
