--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -4,6 +4,7 @@
   position: relative;
   overflow: visible;
   background-color: var(--light-color);
+  /* background-color: #A59E8C; */
   padding-bottom: 5rem;
   padding-top: 1rem;
 }
