--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -58,6 +58,7 @@ body {
   --taupe-color: #A68F6D;
   --dark-color: #3B3B3C;
   --sand-color: #E3E1D9;
+  --darksand-color: #A59E8C;
 
   --main-font: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
   --serif-one-font: 'Artaza-regular', serif;
