--- a/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
+++ b/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--light-color);
-  margin-bottom: 5rem;
+  /* margin-bottom: 5rem; */
+  /* background-color: #A59E8C; */
+
 }
- 
