--- a/mi-aplicacion/src/pages/Sell/Sell.css
+++ b/mi-aplicacion/src/pages/Sell/Sell.css
@@ -56,3 +56,89 @@ font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.8rem;
   }
 }
+
+
+/* .sell-wrapper {
+  padding-top: 0rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.sell-page-background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 0rem;
+  text-align: center;
+  background-color: transparent;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/salon3.jpg');
+  background-size: cover;
+  background-position: center 65%;
+  width: 100%;
+  height: 70vh; 
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+}
+
+.sell-form-content {
+  position: relative;
+  z-index: 2;
+  background-color: var(--light-color);
+
+  transition: transform 0.1s ease-out;
+  padding-top: 0px;
+  will-change: transform;
+}
+
+.sell-page-background h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 100;
+  font-size: 3.5rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  color: var(--light-color);
+}
+
+@media screen and (max-width: 768px) {
+  .sell-page-background {
+      height: 60vh;
+      background-position: center;
+  }
+  
+  .sell-page-background h1 {
+      font-size: 2.8rem;
+      padding: 0 1.5rem;
+  }
+  
+  .sell-form-container {
+      margin-top: -100px; 
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .sell-page-background {
+      height: 50vh;
+  }
+  
+  .sell-page-background h1 {
+      font-size: 2.2rem;
+      padding: 0 1rem;
+      margin-bottom: 0.8rem;
+  }
+  
+  .sell-form-container {
+      margin-top: -80px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .sell-page-background h1 {
+      font-size: 1.8rem;
+  }
+  
+  .sell-form-container {
+      margin-top: -60px;
+  }
+} */
