--- a/mi-aplicacion/src/pages/IndividualHome/Components/InfoProperty2.css
+++ b/mi-aplicacion/src/pages/IndividualHome/Components/InfoProperty2.css
@@ -4,6 +4,7 @@
     background-color: var(--sand-color);
     padding-top: 2rem;
     padding-bottom: 2rem;
+    border-top: 1px solid var(--corporative-color);
 
 }
 
