--- a/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
+++ b/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
@@ -5,8 +5,51 @@
 .individual-home-wrapper {
   display: flex;
   flex-direction: column;
-  background-color: var(--light-color);
+  /* background-color: var(--darksand-color); */
   /* margin-bottom: 5rem; */
   /* background-color: #A59E8C; */
 
+  position: relative;
+  overflow-x: hidden; 
+}
+
+.animated-background {
+  position: absolute;
+  top: 38rem;
+  left: 0;
+  width: 100%;
+  height: 220vh; /* Alto suficiente para cubrir la región deseada */
+  background-color: var(--darksand-color);
+  z-index: -1; /* Detrás del contenido */
+  transform: translateY(0);
+  transition: transform 0.4s ease-out;
+  will-change: transform, opacity; /* Optimización de rendimiento */
+}
+
+.header.individual-page-header {
+  background-color: transparent;
+}
+
+
+
+
+
+
+/* Aplicar estilos basados en las clases agregadas según el dispositivo */
+.animated-background.tablet {
+  top: 32rem;
+  height: 180vh;
+  transition: transform 0.35s ease-out;
+}
+
+.animated-background.mobile {
+  top: 25rem;
+  height: 150vh;
+  transition: transform 0.3s ease-out;
+}
+
+.animated-background.small-mobile {
+  top: 20rem;
+  height: 130vh;
+  transition: transform 0.25s ease-out;
 }
