componente para google maps y componente similarHome para proponer casas parecidas en individualHome

--- a/mi-aplicacion/public/fonts/fonts.css
+++ b/mi-aplicacion/public/fonts/fonts.css
@@ -7,3 +7,8 @@
     font-family: 'Artaza-italic';
     src: url('/fonts/SortsMillGoudy-Italic.ttf') format('truetype');
 }
+
+@font-face {
+    font-family: 'Baskerville';
+    src: url('/fonts/LibreBaskerville-Regular.ttf') format('truetype');
+}
