--- a/mi-aplicacion/src/components/Header/HeaderPhone2.css
+++ b/mi-aplicacion/src/components/Header/HeaderPhone2.css
@@ -8,6 +8,7 @@
     align-items: center;
     padding: 1.5rem 1rem;
     background-color: transparent;
+    /* background-color: var(--light-color); */
     position: fixed;
     top: 0;
     left: 0;
@@ -86,7 +87,7 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     background-color: var(--corporative-color);
     padding-top: 175px;
     z-index: 1100;
