--- a/mi-aplicacion/src/components/Valuation/Valuation.css
+++ b/mi-aplicacion/src/components/Valuation/Valuation.css
@@ -8,8 +8,8 @@
   justify-content: center;
   /* background-color: var(--nude-color); */
   /* background-color: #A89378; */
-  margin-top: 3rem;
-  background-color: var(--sand-color);
+  margin-top: 0rem;
+  background-color: var(--taupe-color);
   min-height: 80vh;
 }
 
