--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -59,6 +59,9 @@ body {
   --dark-color: #3B3B3C;
   --sand-color: #E3E1D9;
   --darksand-color: #A59E8C;
+  --prueba-color: #88979D;
+  --or-color: #AB976E;
+
 
   --main-font: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
   --serif-one-font: 'Artaza-regular', serif;
