--- a/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
+++ b/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
@@ -5,25 +5,24 @@
 .individual-home-wrapper {
   display: flex;
   flex-direction: column;
-  /* background-color: var(--darksand-color); */
-  /* margin-bottom: 5rem; */
-  /* background-color: #A59E8C; */
+
 
   position: relative;
   overflow-x: hidden; 
+  /* background-color: var(--sand-color); */
 }
 
-.animated-background {
+/* .animated-background {
   position: absolute;
   top: 38rem;
   left: 0;
   width: 100%;
-  height: 220vh; /* Alto suficiente para cubrir la región deseada */
-  background-color: var(--darksand-color);
-  z-index: -1; /* Detrás del contenido */
+  height: 220vh;
+  background-color: var(--or-color);
+  z-index: -1; 
   transform: translateY(0);
   transition: transform 0.4s ease-out;
-  will-change: transform, opacity; /* Optimización de rendimiento */
+  will-change: transform, opacity;
 }
 
 .header.individual-page-header {
@@ -35,7 +34,6 @@
 
 
 
-/* Aplicar estilos basados en las clases agregadas según el dispositivo */
 .animated-background.tablet {
   top: 32rem;
   height: 180vh;
@@ -52,4 +50,4 @@
   top: 20rem;
   height: 130vh;
   transition: transform 0.25s ease-out;
-}
+} */
