--- a/mi-aplicacion/src/pages/Sell/components/SellForm.css
+++ b/mi-aplicacion/src/pages/Sell/components/SellForm.css
@@ -60,7 +60,7 @@
 }
 
 .sell-form-container .form-group label {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
   display: block;
   margin-bottom: 0.5rem;
   font-size: 0.85rem;
@@ -74,12 +74,16 @@ select,
 textarea {
   width: 100%;
   padding: 0.8rem;
-  border: 1px solid var(--nude-color);
+  /* border: 1px solid var(--nude-color); */
+  border: 1px solid transparent;
   border-radius: 0px;
   font-size: 1rem;
   transition: border-color 0.2s;
-  background-color: transparent;
+  /* background-color: transparent; */
+  background-color: var(--sand-color); 
   color: var(--dark-color);
+  opacity: 0.6;
+  font-weight: 100;
 }
 
 input:focus,
@@ -129,7 +133,7 @@ textarea:focus {
   cursor: pointer;
   background-color: transparent;
   margin-bottom: 1rem;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
   /* display: block; */
   margin-bottom: 0.5rem;
   font-size: 0.85rem;
@@ -184,20 +188,22 @@ textarea:focus {
 }
 
 .sell-form-container .submit-button {
-  background-color: var(--corporative-color);
+  background-color: var(--prueba-color);
   color: white;
   border: none;
   padding: 1rem 2rem;
-  font-size: 1.1rem;
-  font-weight: 500;
-  border-radius: 30px;
+  font-size: 1rem;
+  font-weight: 100;
+  /* border-radius: 30px; */
+  border-radius: 0;
+  text-transform: uppercase;
   cursor: pointer;
   transition: background-color 0.2s;
   margin-top: 1rem;
 }
 
 .sell-form-container .submit-button:hover {
-  background-color: var(--dark-color);
+  background-color: var(--corporative-color);
 }
 
 .sell-form-container .terms-section {
