--- a/mi-aplicacion/src/pages/Contact/Contact2.css
+++ b/mi-aplicacion/src/pages/Contact/Contact2.css
@@ -4,12 +4,14 @@
     flex-direction: column;
     padding-top: 6rem;
     padding-bottom: 10rem;
-    background-color: var(--sand-color);
+    /* background-color: var(--sand-color); */
+    background-color: var(--light-color);
+
 }
 
-.header.contact-page-header {
+/* .header.contact-page-header {
     background-color: transparent;
-}
+} */
 /* .header.contact-page-header:hover {
     background-color: var(--light-transparent-color);
 } */
