--- a/mi-aplicacion/src/pages/IndividualHome/Components/InfoProperty2.css
+++ b/mi-aplicacion/src/pages/IndividualHome/Components/InfoProperty2.css
@@ -5,7 +5,7 @@
     padding-top: 2rem;
     padding-bottom: 2rem;
     border-top: 1px solid var(--corporative-color);
-
+    border-bottom: 1px solid var(--corporative-color);
 }
 
 .title-info {
@@ -62,7 +62,8 @@
     flex: 0.3;
     display: flex;
     flex-direction: column;
-    border-bottom: 1px solid var(--dark-color);
+    /* border-bottom: 1px solid var(--dark-color); */
+    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
     padding-bottom: 2rem;
 }
 
@@ -92,7 +93,8 @@
 .column-description {
     flex: 0.7;
     display: flex;
-    border-bottom: 1px solid var(--dark-color);
+    /* border-bottom: 1px solid var(--dark-color); */
+    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
     padding-bottom: 2rem;
 }
 
@@ -104,11 +106,11 @@
     width: 100%;
     line-height: 2rem;
     color: var(--dark-color);
-    text-align: justify;
-    text-justify: inter-word;
+    /* text-align: justify; */
+    /* text-justify: inter-word; */
     column-count: 2;
     column-gap: 4rem;
-    column-rule: 0.5px solid #eee;
+    /* column-rule: 0.5px solid #eee; */
 }
 
 .individual-home-totalinfo {
@@ -130,7 +132,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 1rem;
-    border-bottom: 1px solid var(--dark-color);
+    /* border-bottom: 1px solid var(--dark-color); */
+    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
     padding-bottom: 2rem;
 }
 
@@ -177,7 +180,7 @@
     width: 100%;
     box-sizing: border-box;
     padding-bottom: 2rem;
-    border-bottom: 1px solid var(--dark-color);
+    /* border-bottom: 1px solid var(--dark-color); */
 }
 
 .extras-list li {
