--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -107,6 +107,7 @@
   font-size: 2rem;
   font-weight: 100;
   font-family: Georgia, 'Times New Roman', Times, serif;
+      /* font-family: 'Baskerville'; */
   margin-bottom: 1.4rem;
   padding-bottom: 1.5rem;
   border-bottom: 2px solid var(--dark-color);
